# parser

./: CMakeLists.txt
core/parser/: CMakeLists.txt
core/parser/include/parser/: parser.h
core/parser/src/: parser.cpp
src/: main.cpp
